syntax = "proto3";

                 package fishingLootTemplate;
service FishingLootTemplateService {
 rpc createFishingLootTemplate (FishingLootTemplateCreateInput) returns (FishingLootTemplate) {}
rpc fishingLootTemplates (findManyParams) returns (stream FishingLootTemplate) {}
rpc fishingLootTemplate (FishingLootTemplateWhereUniqueInput) returns (FishingLootTemplate) {}
rpc updateFishingLootTemplate (FishingLootTemplateUpdateInput) returns (FishingLootTemplate) {}
rpc deleteFishingLootTemplate (FishingLootTemplateWhereUniqueInput) returns (FishingLootTemplate) {} 
 }
message FishingLootTemplateCreateInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message FishingLootTemplate {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message FishingLootTemplateWhereUniqueInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message FishingLootTemplateUpdateInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message findManyParams {

};